{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 124,
  "lineage": "dc414232-6dd1-1e22-09e8-7630651960f2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraformed",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ed9277fb7eb570c9",
            "arn": "arn:aws:ec2:us-east-1:073924102150:instance/i-0aecb8e76f232516c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0aecb8e76f232516c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bffd24b779df92d3",
            "private_dns": "ip-10-0-1-254.ec2.internal",
            "private_ip": "10.0.1.254",
            "public_dns": "ec2-52-73-107-73.compute-1.amazonaws.com",
            "public_ip": "52.73.107.73",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05439ff1a3c6cfb7a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01f2fff4202ccc2c7",
            "tags": {
              "Name": "webserver-01"
            },
            "tags_all": {
              "Name": "webserver-01"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-053dcdcfd85d5274d"
            ]
          },
          "dependencies": [
            "aws_subnet.SN-public-1A",
            "aws_vpc.VPC-A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraformed2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ed9277fb7eb570c9",
            "arn": "arn:aws:ec2:us-east-1:073924102150:instance/i-0dcf4c3fe71cc8087",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dcf4c3fe71cc8087",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-046bbd9c907c80ae0",
            "private_dns": "ip-10-0-3-243.ec2.internal",
            "private_ip": "10.0.3.243",
            "public_dns": "ec2-54-81-36-89.compute-1.amazonaws.com",
            "public_ip": "54.81.36.89",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0aceaf1b306745837",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c67dd32510f49f83",
            "tags": {
              "Name": "webserver-02"
            },
            "tags_all": {
              "Name": "webserver-02"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-053dcdcfd85d5274d"
            ]
          },
          "dependencies": [
            "aws_subnet.SN-public-2A",
            "aws_vpc.VPC-A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraformed3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ed9277fb7eb570c9",
            "arn": "arn:aws:ec2:us-east-1:073924102150:instance/i-0de9e2610b9d464b9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0de9e2610b9d464b9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01df6c7de86e7b700",
            "private_dns": "ip-192-168-1-210.ec2.internal",
            "private_ip": "192.168.1.210",
            "public_dns": "ec2-107-20-88-81.compute-1.amazonaws.com",
            "public_ip": "107.20.88.81",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-016dd1e80a89755ff",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-007bca40b9e1a982d",
            "tags": {
              "name": "webserver-01"
            },
            "tags_all": {
              "name": "webserver-01"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0bb8b99adf3f35b1f"
            ]
          },
          "dependencies": [
            "aws_subnet.SN-public-1B",
            "aws_vpc.VPC-B"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraformed4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ed9277fb7eb570c9",
            "arn": "arn:aws:ec2:us-east-1:073924102150:instance/i-08aa553a061891769",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08aa553a061891769",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b0a1898042c24ac3",
            "private_dns": "ip-192-168-3-186.ec2.internal",
            "private_ip": "192.168.3.186",
            "public_dns": "ec2-54-87-194-247.compute-1.amazonaws.com",
            "public_ip": "54.87.194.247",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01cd8f276f1c2a424",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cc66919ac891a0c0",
            "tags": {
              "name": "webserver-02"
            },
            "tags_all": {
              "name": "webserver-02"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0bb8b99adf3f35b1f"
            ]
          },
          "dependencies": [
            "aws_subnet.SN-public-2B",
            "aws_vpc.VPC-B"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:073924102150:internet-gateway/igw-0b2377bf5b564028a",
            "id": "igw-0b2377bf5b564028a",
            "owner_id": "073924102150",
            "tags": {
              "Name": "Internet Gateway"
            },
            "tags_all": {
              "Name": "Internet Gateway"
            },
            "vpc_id": "vpc-0c73cb49a0b9aae95"
          },
          "dependencies": [
            "aws_vpc.VPC-A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:073924102150:internet-gateway/igw-0a430e19152a16c29",
            "id": "igw-0a430e19152a16c29",
            "owner_id": "073924102150",
            "tags": {
              "Name": "Internet Gateway"
            },
            "tags_all": {
              "Name": "Internet Gateway"
            },
            "vpc_id": "vpc-074ae21736915a83e"
          },
          "dependencies": [
            "aws_vpc.VPC-B"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RT-public1A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:073924102150:route-table/rtb-09d83ccd30387ba92",
            "id": "rtb-09d83ccd30387ba92",
            "owner_id": "073924102150",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b2377bf5b564028a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Access Routing Table 1"
            },
            "tags_all": {
              "Name": "Public Access Routing Table 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c73cb49a0b9aae95"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW-A",
            "aws_vpc.VPC-A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RT-public1B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:073924102150:route-table/rtb-0270059cfb133565e",
            "id": "rtb-0270059cfb133565e",
            "owner_id": "073924102150",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a430e19152a16c29",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Access Routing Table 1"
            },
            "tags_all": {
              "Name": "Public Access Routing Table 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-074ae21736915a83e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW-B",
            "aws_vpc.VPC-B"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RT-public2A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:073924102150:route-table/rtb-0fb1fa4dc76837200",
            "id": "rtb-0fb1fa4dc76837200",
            "owner_id": "073924102150",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b2377bf5b564028a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Access Routing Table 2"
            },
            "tags_all": {
              "Name": "Public Access Routing Table 2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c73cb49a0b9aae95"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW-A",
            "aws_vpc.VPC-A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RT-public2B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:073924102150:route-table/rtb-0ba5ae8ada19b41ba",
            "id": "rtb-0ba5ae8ada19b41ba",
            "owner_id": "073924102150",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a430e19152a16c29",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Access Routing Table 2"
            },
            "tags_all": {
              "Name": "Public Access Routing Table 2"
            },
            "timeouts": null,
            "vpc_id": "vpc-074ae21736915a83e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW-B",
            "aws_vpc.VPC-B"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-064f30e197c8df0a4",
            "route_table_id": "rtb-09d83ccd30387ba92",
            "subnet_id": "subnet-01f2fff4202ccc2c7"
          },
          "dependencies": [
            "aws_internet_gateway.IGW-A",
            "aws_route_table.RT-public1A",
            "aws_subnet.SN-public-1A",
            "aws_vpc.VPC-A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a2fb67864bdd9e70",
            "route_table_id": "rtb-0270059cfb133565e",
            "subnet_id": "subnet-007bca40b9e1a982d"
          },
          "dependencies": [
            "aws_internet_gateway.IGW-B",
            "aws_route_table.RT-public1B",
            "aws_subnet.SN-public-1B",
            "aws_vpc.VPC-B"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0de88c9f54eae1fa8",
            "route_table_id": "rtb-0fb1fa4dc76837200",
            "subnet_id": "subnet-0c67dd32510f49f83"
          },
          "dependencies": [
            "aws_internet_gateway.IGW-A",
            "aws_route_table.RT-public2A",
            "aws_subnet.SN-public-2A",
            "aws_vpc.VPC-A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-058bb66aec7e139b6",
            "route_table_id": "rtb-0ba5ae8ada19b41ba",
            "subnet_id": "subnet-0cc66919ac891a0c0"
          },
          "dependencies": [
            "aws_internet_gateway.IGW-B",
            "aws_route_table.RT-public2B",
            "aws_subnet.SN-public-2B",
            "aws_vpc.VPC-B"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "SN-private-1A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:073924102150:subnet/subnet-0aa3054e82ccbd2bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0aa3054e82ccbd2bd",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "073924102150",
            "tags": {
              "Name": "subnet-private-1"
            },
            "tags_all": {
              "Name": "subnet-private-1"
            },
            "vpc_id": "vpc-0c73cb49a0b9aae95"
          },
          "dependencies": [
            "aws_vpc.VPC-A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "SN-private-1B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:073924102150:subnet/subnet-0f3d4d236e2151345",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.2.0/24",
            "id": "subnet-0f3d4d236e2151345",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "073924102150",
            "tags": {
              "Name": "subnet-private-1"
            },
            "tags_all": {
              "Name": "subnet-private-1"
            },
            "vpc_id": "vpc-074ae21736915a83e"
          },
          "dependencies": [
            "aws_vpc.VPC-B"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "SN-private-2A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:073924102150:subnet/subnet-0e6f1ab8394f9b240",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0e6f1ab8394f9b240",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "073924102150",
            "tags": {
              "Name": "subnet-private-2"
            },
            "tags_all": {
              "Name": "subnet-private-2"
            },
            "vpc_id": "vpc-0c73cb49a0b9aae95"
          },
          "dependencies": [
            "aws_vpc.VPC-A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "SN-private-2B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:073924102150:subnet/subnet-073e674df959bb290",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.4.0/24",
            "id": "subnet-073e674df959bb290",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "073924102150",
            "tags": {
              "Name": "subnet-private-2"
            },
            "tags_all": {
              "Name": "subnet-private-2"
            },
            "vpc_id": "vpc-074ae21736915a83e"
          },
          "dependencies": [
            "aws_vpc.VPC-B"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "SN-public-1A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:073924102150:subnet/subnet-01f2fff4202ccc2c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-01f2fff4202ccc2c7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "073924102150",
            "tags": {
              "Name": "subnet-public-1"
            },
            "tags_all": {
              "Name": "subnet-public-1"
            },
            "vpc_id": "vpc-0c73cb49a0b9aae95"
          },
          "dependencies": [
            "aws_vpc.VPC-A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "SN-public-1B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:073924102150:subnet/subnet-007bca40b9e1a982d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-007bca40b9e1a982d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "073924102150",
            "tags": {
              "Name": "subnet-public-1"
            },
            "tags_all": {
              "Name": "subnet-public-1"
            },
            "vpc_id": "vpc-074ae21736915a83e"
          },
          "dependencies": [
            "aws_vpc.VPC-B"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "SN-public-2A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:073924102150:subnet/subnet-0c67dd32510f49f83",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0c67dd32510f49f83",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "073924102150",
            "tags": {
              "Name": "subnet-public-2"
            },
            "tags_all": {
              "Name": "subnet-public-2"
            },
            "vpc_id": "vpc-0c73cb49a0b9aae95"
          },
          "dependencies": [
            "aws_vpc.VPC-A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "SN-public-2B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:073924102150:subnet/subnet-0cc66919ac891a0c0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.3.0/24",
            "id": "subnet-0cc66919ac891a0c0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "073924102150",
            "tags": {
              "Name": "subnet-public-2"
            },
            "tags_all": {
              "Name": "subnet-public-2"
            },
            "vpc_id": "vpc-074ae21736915a83e"
          },
          "dependencies": [
            "aws_vpc.VPC-B"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:073924102150:vpc/vpc-0c73cb49a0b9aae95",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ded23a5775f15125",
            "default_route_table_id": "rtb-0240411cd15d49002",
            "default_security_group_id": "sg-053dcdcfd85d5274d",
            "dhcp_options_id": "dopt-08dde2cc9479ff50f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0c73cb49a0b9aae95",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0240411cd15d49002",
            "owner_id": "073924102150",
            "tags": {
              "Name": "vpc-A"
            },
            "tags_all": {
              "Name": "vpc-A"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:073924102150:vpc/vpc-074ae21736915a83e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0945155e9e0077d7f",
            "default_route_table_id": "rtb-0d71228916dd5ef21",
            "default_security_group_id": "sg-0bb8b99adf3f35b1f",
            "dhcp_options_id": "dopt-08dde2cc9479ff50f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-074ae21736915a83e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d71228916dd5ef21",
            "owner_id": "073924102150",
            "tags": {
              "Name": "vpc-B"
            },
            "tags_all": {
              "Name": "vpc-B"
            }
          }
        }
      ]
    }
  ]
}